<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pond"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gameActivities.EcopondTimerActivity"
    android:background="@android:color/background_dark"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/Dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:paddingBottom="0dp">

        <LinearLayout
            android:id="@+id/fish_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fish_res"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/fish_res"
                android:textColor="#8CEAFF" />

            <TextView
                android:id="@+id/fish_gear_level"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/fish_gear_level"
                android:textColor="#8CEAFF" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/wood_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wood_res"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:fontFamily="sans-serif"
                android:text="@string/wood_res"
                android:textColor="#8FFF7C" />

            <TextView
                android:id="@+id/wood_gear_level"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/wood_gear_level"
                android:textColor="#8FFF7C" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/combat_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gold_res"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:fontFamily="sans-serif"
                android:text="@string/gold_res"
                android:textColor="#CCA533" />

            <TextView
                android:id="@+id/combat_gear_level"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/combat_gear_level"
                android:textColor="#CCA533" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/agg_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/agg_level"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/agg_level"
                android:textColor="#FF9999" />

            <TextView
                android:id="@+id/agg_level_progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/agg_level_progress"
                android:textColor="#FF9999" />

            <!--            <ProgressBar-->
            <!--                android:id="@+id/pg_bar"-->
            <!--                style="@android:style/Widget.ProgressBar.Horizontal"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginHorizontal="10dp"-->
            <!--                android:layout_weight="1"-->
            <!--                android:progress="25">-->
            <!--            </ProgressBar>-->

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="ECO POND"
        android:textColor="#C89FFD"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textStyle="bold">

    </TextView>

    <ImageView
        android:id="@+id/page_img"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:srcCompat="@drawable/ic_fishing"
        android:tint="#8CEAFF">

    </ImageView>

    <TextView
        android:id="@+id/gain_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/gain_display"
        android:textColor="#C89FFD"
        android:textSize="20dp"
        android:textAlignment="center">
    </TextView>

    <TextView
        android:id="@+id/stamina_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/stamina"
        android:textAlignment="center"
        android:textColor="#C89FFD"
        android:textSize="20dp">

    </TextView>


    <LinearLayout
        android:id="@+id/time_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/timer_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="5dp"
            android:tint="#C89FFD"
            app:srcCompat="@drawable/ic_baseline_timer_24"></ImageView>

        <TextView
            android:id="@+id/time_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:gravity="center"
            android:text="5:09"
            android:textColor="#C89FFD"
            android:textSize="25sp"></TextView>

        <ImageButton
            android:id="@+id/start_pause_resume_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="15dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:tint="#C89FFD"
            app:srcCompat="@drawable/ic_baseline_play_circle_filled_24"></ImageButton>

        <ImageButton
            android:id="@+id/reset_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="15dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:tint="#C89FFD"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_baseline_refresh_24"></ImageButton>


    </LinearLayout>

</LinearLayout>