...
    <string name="sign_up">Don\'t have an account? Sign up here.</string>
    <string name="avatar_description">go to the random page for testing purpose</string>



    <!-- For loading Travel Page attributes -->
    <string name="woodcutting_name"><u>Cendana Forest</u></string>
    <string name="fishing_name"><u>Eco Pond</u></string>
    <string name="battleground_name"><u>Saga Battleground</u></string>
    <string name="armory_name"><u>DoS Armory Shop</u></string>
    <string name="marketplace_name"><u>Elm Buttery Trading Hub</u></string>
    <string name="login">Login</string>


    <!-- For loading User attributes -->
    <string name="wood_res">Wood:</string>
    <string name="wood_gear_level">Wood Gear Level:</string>
    <string name="fish_res">Fish:</string>
...
